--- a/src/components/GlobelStyle/GlobalStyle.scss
+++ b/src/components/GlobelStyle/GlobalStyle.scss
@@ -2,6 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,500;1,700&display=swap");
 :root {
   --primary: #fe2c55;
+  // Default Layout
+  --default-layout-header-height: 60px;
+  --default-layout-width: 1150px;
+  --back: #000;
+  --text-color: #333;
 }
 * {
   box-sizing: border-box;
@@ -11,9 +16,22 @@
 html {
   font-size: 62.5%;
 }
+img {
+  width: 100%;
+}
 body {
   font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
+}
+button,
+input,
+[tabindex] {
+  outline: none;
+  border: none;
+}
+a[href] {
+  color: var(--text-color);
+  text-decoration: none;
 }
